Fix some spacing issues

--- a/styles/pages/_content.scss
+++ b/styles/pages/_content.scss
@@ -28,7 +28,10 @@ main.page--article{
             background-color: white;
             box-shadow: rgba(0,0,0,0.1) 0px 1px 3px;
             position: relative;
-            padding: 3rem;
+            padding-top: 2rem;
+            padding-left: 4rem;
+            padding-right: 4rem;
+            padding-bottom: 4rem;
 
             @include media-breakpoint-down(xs) {
                 padding: 1rem;
@@ -303,6 +306,10 @@ main.page--article{
     }
 
     .references{
+        margin-top: 2rem;
+        padding-top: 2rem;
+        border-top: 1px solid #eee;
+
         margin-left: 0;
         list-style-type: none;
         li{
